--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,6 @@ img {
 
 .header-container {
     display: flex;
-    padding-right: 27px;
-    padding-left: 32px;
 }
 
 .logo-link {
@@ -70,6 +68,14 @@ img {
     margin-left: auto;
     border: none;
     background-color: transparent;
+}
+
+.navigation {
+    display: none;
+}
+
+.nav-btn-list {
+    display: none;
 }
 
 /**---------------HERO---------------**/
@@ -214,7 +220,7 @@ img {
     line-height: 1.6;
 }
 
-.sign-up-btn {
+.features-btn {
     display: block;
     margin: 0 auto;
     padding: 15px 32px 14px 34px;
