--- a/css/styles.css
+++ b/css/styles.css
@@ -150,9 +150,9 @@ img {
 
 .features {
     padding-top: 16px;
-    padding-bottom: 38px;
+    padding-bottom: 43px;
+    background-image: radial-gradient(450% 200% at 50% 0, transparent 40%, #EDEDED 50%, transparent 50%);
 }
-
 .features-title {
     max-width: 331px;
     margin-right: auto;
@@ -168,7 +168,7 @@ img {
     flex-direction: column;
     align-items: center;
     gap: 37px;
-    padding-bottom: 37px;
+    margin-bottom: 37px;
 }
 
 .features-item {
@@ -223,7 +223,7 @@ img {
 .features-btn {
     display: block;
     margin: 0 auto;
-    padding: 15px 32px 14px 34px;
+    padding: 15px 32px 15px 34px;
     color: #FFFFFF;
     font-size: 16px;
     font-weight: 700;
